# godos

./: .gitignore  README.md  config.json  go.mod  main.go
c/glad/: CMakeLists.txt  glad.pc  glad.pc.in  install_manifest.txt
c/glad/include/glad/: gl.h
c/glad/src/: gl.c
shared/: shared.go
